--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 				<a href="#contact" class="btn">Contact us</a>
 			</div>
 		</section>
-		<section id="about">
+		<!-- <section id="about">
 			<div class="cards">
 				<div class="card">
 					<div class="card-img">
@@ -75,7 +75,7 @@
 				</h3>
 			</div>
 		</section>
-		<section id="contact"></section>
+		<section id="contact"></section> -->
 	</body>
 	<script src="static/js/script.js" defer></script>
 </html>
